package com.example.authentication.service;


import com.example.authentication.entity.User;
import com.example.grpc.*;
import lombok.RequiredArgsConstructor;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
import org.springframework.stereotype.Service;

import java.util.HashMap;
import java.util.Map;

@Service
@RequiredArgsConstructor
public class AuthService {

    private final BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();

    // üëá gRPC client t·ª± ƒë·ªông inject theo t√™n trong application.yml
    @GrpcClient("booking-service")
    private AuthServiceGrpc.AuthServiceBlockingStub authStub;

    public Map<String, Object> register(com.example.authentication.request.RegisterRequest user) {
        // M√£ ho√° m·∫≠t kh·∫©u tr∆∞·ªõc khi g·ª≠i qua gRPC
//        String hashed = encoder.encode(user.getPassword());

        // T·∫°o request t·ª´ proto
        RegisterRequest request = RegisterRequest.newBuilder()
                .setUsername(user.getUsername())
                .setPassword(user.getPassword())
                .build();

        // G·ªçi t·ªõi AuthService (·ªü server)
        RegisterResponse response = authStub.register(request);

        // Map k·∫øt qu·∫£ tr·∫£ v·ªÅ
        Map<String, Object> result = new HashMap<>();
        result.put("status", response.getStatus());
        return result;
    }

    public Map<String, Object> login(User user) {
        // T·∫°o request t·ª´ proto
        LoginRequest request = LoginRequest.newBuilder()
                .setUsername(user.getUsername())
                .setPassword(user.getPassword())
                .build();

        // G·ªçi t·ªõi AuthService (·ªü server)
        LoginResponse response = authStub.login(request);
        // Map k·∫øt qu·∫£ tr·∫£ v·ªÅ
        Map<String, Object> result = new HashMap<>();
        result.put("status", response.getStatus());
        result.put("token", response.getMessage());
        return result;
    }
}
